# golden_b

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  deploy_dev.yml  deploy_prod.yml
core/: settings.py  urls.py  views.py
mainapps/accounts/: admin.py  authentication.py  jwt_urls.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
mainapps/accounts/migrations/: 0001_initial.py  0002_organisation_user_organisation.py  0003_remove_verificationcode_accounts_ve_user_id_0d0e3b_idx_and_more.py  0004_address.py  0005_organisation_physical_address_user_address.py  0006_user_has_been_kyc_rewarded.py  0007_remove_user_atc_balance.py  0008_user_has_setup_mfa_user_mfa_enabled_user_mfa_secret.py
mainapps/blockchain/: admin.py  apps.py  kms_signer.py  models.py  serializers.py  signals.py  test_kms_address.py  uniswap_trade_api.py  uniswap_v4_price.py  urls.py  views.py
mainapps/blockchain/migrations/: 0001_initial.py  0002_token_purchase.py  0003_rename_blockchain_user_id_1a3309_idx_blockchain__user_id_f2b571_idx_and_more.py
mainapps/kyc/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
mainapps/kyc/migrations/: 0001_initial.py  (+12 more)
mainapps/smart_contract/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
mainapps/wallet/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
subapps/smart_contract/: gzc.json  reward_distributor.json  token_abi.json
templates/accounts/: verify.html
(+9 files in other folders)
